# cosy-ai-forced-alignment

./: README.md  pyproject.toml
laboratorium_ai_forced_alignment/: Preprocessing.py  Preprocessing_VAD.py  __main__.py  main.py  test.py
laboratorium_ai_forced_alignment/data/: Silero_Vad.pt  WhisperFilterList.json
